2007-06-15  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/CustomResolver.cs => AssemblyResolver.cs,
	  Mono.Linker/Annotations.cs,
	  Mono.Linker/LinkContext.cs,
	  Mono.Linker.Steps/ResolveFromXmlStep.cs:
		Clean up the assembly reference system.
		Fixes bug where the linker have multiple
		time the same assembly in its cache.

2007-06-13  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/OutputStep.cs:
		Copy .config files alongs with assemblies.

	* Mono.Linker.Steps/CleanStep.cs:
		Clean memberref that are not used anymore.

2007-06-12  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/AdjustVisibilityStep.cs,
	  Mono.Linker.Steps/ResolveFromApiInfoStep.cs,
	  Mono.Linker/Drivers.cs:
		Adjust the visibility depending on the data
		gathered in the api-info.

	* Mono.Linker.Steps/ResolveFromApiInfoStep.cs:
	  Mono.Linker/Driver.cs:
		Started working on linking from api-info.

2007-06-08  Jb Evain  <jbevain@novell.com>

	* Descriptors/System.Drawing.xml,
	  Mono.Linker.Steps/BlackListStep.cs:
		Add preserve infos for System.Drawing.

	* Mono.Linker.Steps/MarkStep.cs:
	  Tests/TestsCases/Linker/Generics/*:
		Also walk through generic instances to
		mark arguments.

2007-06-07  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/MarkStep.cs:
		Mark types used in some marshal specs.

	* Mono.Linker.Tests/MarkStep.cs
	  Tests/Mono.Linker.Tests/XmlLinkingTestFixture.cs
	  Tests/TestCases/Linker/ReferenceInAttributes/*:
		Mark fields and setters used in custom attribute
		instantiation. Mark also types used in custom attribute
		instantiation.

	* profiler/Makefile,
	  profiler/link.c:
		Add a small profiler that outputs the xml format
		that the linker can resolve.

		By running an application with the profiler, one
		can help the linker gather data. Especially for dynamic
		cases like assembly loading an dynamic type resolving.

2007-06-06  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/MarkStep.cs:
	  Mono.Linker/CustomResolvercs: